--- a/Lab01/Controller_Top_Module_summary.html
+++ b/Lab01/Controller_Top_Module_summary.html
@@ -5,7 +5,7 @@
 <TD ALIGN=CENTER COLSPAN='4'><B>Controller_Top_Module Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>Lab01.xise</TD>
+<TD>Lab1_corrections.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
 <TD> No Errors </TD>
 </TR>
@@ -72,9 +72,9 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/nihhaar/Documents/VHDL/Lab01/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sat Mar 25 19:17:33 2017</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/nihhaar/Documents/VHDL/Lab01/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sat Mar 25 19:22:53 2017</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/25/2017 - 19:18:13</center>
+<br><center><b>Date Generated:</b> 03/25/2017 - 19:24:01</center>
 </BODY></HTML>
